refactor(wind-server): 重构部分代码并优化性能
- 修改 WindAuthenticationTokenCodecService 中生成 token 的逻辑
- 更新 JwtTokenCodec 中编码 token 的方法
- 重构 SentinelWebInterceptor 类，使用 record 关键字简化代码
- 优化 WindAcceptI18nHeaderLocaleResolver 中的 locale 解析逻辑
- 更新 WindAuthenticationUser 类，使用 record 关键字重构
-简化 WindControllerMethodInterceptor 的实现
- 优化 WindMiddlewareDetector 中的中间件类型检测
- 更新 WindPropertySourceLoader，使用 record 关键字重构并添加日志输出